Compiler Construction/AnalisadorSintaticoTarefa5/MenhirMsgErro/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PROGRAMA shift to state 1
-- On programa shift to state 109

State 1:
programa -> PROGRAMA . list(declaracao) INICIO list(comando) FIM PTV EOF [ # ]
-- On ID shift to state 2
-- On separated_nonempty_list(VIRG,ID) shift to state 5
-- On list(declaracao) shift to state 33
-- On declaracao shift to state 107
-- On INICIO reduce production list(declaracao) -> 

State 2:
separated_nonempty_list(VIRG,ID) -> ID . [ DPTOS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DPTOS ]
-- On VIRG shift to state 3
-- On DPTOS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 3:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DPTOS ]
-- On ID shift to state 2
-- On separated_nonempty_list(VIRG,ID) shift to state 4

State 4:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DPTOS ]
-- On DPTOS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 5:
declaracao -> separated_nonempty_list(VIRG,ID) . DPTOS tipo PTV [ INICIO ID ]
-- On DPTOS shift to state 6

State 6:
declaracao -> separated_nonempty_list(VIRG,ID) DPTOS . tipo PTV [ INICIO ID ]
-- On REGISTRO shift to state 7
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 31

State 7:
tipo_registro -> REGISTRO . nonempty_list(__anonymous_0) FIM REGISTRO [ PTV ]
-- On ID shift to state 8
-- On nonempty_list(__anonymous_0) shift to state 28

State 8:
nonempty_list(__anonymous_0) -> ID . DPTOS tipo PTV [ FIM ]
nonempty_list(__anonymous_0) -> ID . DPTOS tipo PTV nonempty_list(__anonymous_0) [ FIM ]
-- On DPTOS shift to state 9

State 9:
nonempty_list(__anonymous_0) -> ID DPTOS . tipo PTV [ FIM ]
nonempty_list(__anonymous_0) -> ID DPTOS . tipo PTV nonempty_list(__anonymous_0) [ FIM ]
-- On REGISTRO shift to state 7
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 25

State 10:
tipo_simples -> INTEIRO . [ PTV ]
-- On PTV reduce production tipo_simples -> INTEIRO 

State 11:
tipo_simples -> CADEIA . [ PTV ]
-- On PTV reduce production tipo_simples -> CADEIA 

State 12:
tipo_simples -> BOOLEANO . [ PTV ]
-- On PTV reduce production tipo_simples -> BOOLEANO 

State 13:
tipo_arranjo -> ARRANJO . ACOL limites FCOL DE tipo [ PTV ]
-- On ACOL shift to state 14

State 14:
tipo_arranjo -> ARRANJO ACOL . limites FCOL DE tipo [ PTV ]
-- On INT shift to state 15
-- On limites shift to state 18

State 15:
limites -> INT . PPTO INT [ FCOL ]
-- On PPTO shift to state 16

State 16:
limites -> INT PPTO . INT [ FCOL ]
-- On INT shift to state 17

State 17:
limites -> INT PPTO INT . [ FCOL ]
-- On FCOL reduce production limites -> INT PPTO INT 

State 18:
tipo_arranjo -> ARRANJO ACOL limites . FCOL DE tipo [ PTV ]
-- On FCOL shift to state 19

State 19:
tipo_arranjo -> ARRANJO ACOL limites FCOL . DE tipo [ PTV ]
-- On DE shift to state 20

State 20:
tipo_arranjo -> ARRANJO ACOL limites FCOL DE . tipo [ PTV ]
-- On REGISTRO shift to state 7
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 24

State 21:
tipo -> tipo_simples . [ PTV ]
-- On PTV reduce production tipo -> tipo_simples 

State 22:
tipo -> tipo_registro . [ PTV ]
-- On PTV reduce production tipo -> tipo_registro 

State 23:
tipo -> tipo_arranjo . [ PTV ]
-- On PTV reduce production tipo -> tipo_arranjo 

State 24:
tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo . [ PTV ]
-- On PTV reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 

State 25:
nonempty_list(__anonymous_0) -> ID DPTOS tipo . PTV [ FIM ]
nonempty_list(__anonymous_0) -> ID DPTOS tipo . PTV nonempty_list(__anonymous_0) [ FIM ]
-- On PTV shift to state 26

State 26:
nonempty_list(__anonymous_0) -> ID DPTOS tipo PTV . [ FIM ]
nonempty_list(__anonymous_0) -> ID DPTOS tipo PTV . nonempty_list(__anonymous_0) [ FIM ]
-- On ID shift to state 8
-- On nonempty_list(__anonymous_0) shift to state 27
-- On FIM reduce production nonempty_list(__anonymous_0) -> ID DPTOS tipo PTV 

State 27:
nonempty_list(__anonymous_0) -> ID DPTOS tipo PTV nonempty_list(__anonymous_0) . [ FIM ]
-- On FIM reduce production nonempty_list(__anonymous_0) -> ID DPTOS tipo PTV nonempty_list(__anonymous_0) 

State 28:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) . FIM REGISTRO [ PTV ]
-- On FIM shift to state 29

State 29:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM . REGISTRO [ PTV ]
-- On REGISTRO shift to state 30

State 30:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO . [ PTV ]
-- On PTV reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 

State 31:
declaracao -> separated_nonempty_list(VIRG,ID) DPTOS tipo . PTV [ INICIO ID ]
-- On PTV shift to state 32

State 32:
declaracao -> separated_nonempty_list(VIRG,ID) DPTOS tipo PTV . [ INICIO ID ]
-- On INICIO reduce production declaracao -> separated_nonempty_list(VIRG,ID) DPTOS tipo PTV 
-- On ID reduce production declaracao -> separated_nonempty_list(VIRG,ID) DPTOS tipo PTV 

State 33:
programa -> PROGRAMA list(declaracao) . INICIO list(comando) FIM PTV EOF [ # ]
-- On INICIO shift to state 34

State 34:
programa -> PROGRAMA list(declaracao) INICIO . list(comando) FIM PTV EOF [ # ]
-- On SE shift to state 35
-- On SAIDA shift to state 75
-- On ID shift to state 39
-- On ENTRADA shift to state 81
-- On variavel shift to state 84
-- On list(comando) shift to state 101
-- On comando_se shift to state 91
-- On comando_saida shift to state 92
-- On comando_entrada shift to state 93
-- On comando_atribuicao shift to state 94
-- On comando shift to state 105
-- On FIM reduce production list(comando) -> 

State 35:
comando_se -> SE . APAR expressao FPAR ENTAO nonempty_list(comando) option(__anonymous_1) FIM SE PTV [ SENAO SE SAIDA ID FIM ENTRADA ]
-- On APAR shift to state 36

State 36:
comando_se -> SE APAR . expressao FPAR ENTAO nonempty_list(comando) option(__anonymous_1) FIM SE PTV [ SENAO SE SAIDA ID FIM ENTRADA ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 72

State 37:
expressao -> STRING . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On PTV reduce production expressao -> STRING 
-- On OULOG reduce production expressao -> STRING 
-- On MULT reduce production expressao -> STRING 
-- On MENOS reduce production expressao -> STRING 
-- On MENOR reduce production expressao -> STRING 
-- On MAIS reduce production expressao -> STRING 
-- On MAIOR reduce production expressao -> STRING 
-- On IGUAL reduce production expressao -> STRING 
-- On FPAR reduce production expressao -> STRING 
-- On FCOL reduce production expressao -> STRING 
-- On ELOG reduce production expressao -> STRING 
-- On DIV reduce production expressao -> STRING 
-- On DIFER reduce production expressao -> STRING 
-- On CONCAT reduce production expressao -> STRING 

State 38:
expressao -> INT . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On PTV reduce production expressao -> INT 
-- On OULOG reduce production expressao -> INT 
-- On MULT reduce production expressao -> INT 
-- On MENOS reduce production expressao -> INT 
-- On MENOR reduce production expressao -> INT 
-- On MAIS reduce production expressao -> INT 
-- On MAIOR reduce production expressao -> INT 
-- On IGUAL reduce production expressao -> INT 
-- On FPAR reduce production expressao -> INT 
-- On FCOL reduce production expressao -> INT 
-- On ELOG reduce production expressao -> INT 
-- On DIV reduce production expressao -> INT 
-- On DIFER reduce production expressao -> INT 
-- On CONCAT reduce production expressao -> INT 

State 39:
variavel -> ID . [ VIRG PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ATRIB ACOL ]
-- On VIRG reduce production variavel -> ID 
-- On PTV reduce production variavel -> ID 
-- On PTO reduce production variavel -> ID 
-- On OULOG reduce production variavel -> ID 
-- On MULT reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On FCOL reduce production variavel -> ID 
-- On ELOG reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFER reduce production variavel -> ID 
-- On CONCAT reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On ACOL reduce production variavel -> ID 

State 40:
expressao -> BOOL . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On PTV reduce production expressao -> BOOL 
-- On OULOG reduce production expressao -> BOOL 
-- On MULT reduce production expressao -> BOOL 
-- On MENOS reduce production expressao -> BOOL 
-- On MENOR reduce production expressao -> BOOL 
-- On MAIS reduce production expressao -> BOOL 
-- On MAIOR reduce production expressao -> BOOL 
-- On IGUAL reduce production expressao -> BOOL 
-- On FPAR reduce production expressao -> BOOL 
-- On FCOL reduce production expressao -> BOOL 
-- On ELOG reduce production expressao -> BOOL 
-- On DIV reduce production expressao -> BOOL 
-- On DIFER reduce production expressao -> BOOL 
-- On CONCAT reduce production expressao -> BOOL 

State 41:
expressao -> APAR . expressao FPAR [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 70

State 42:
expressao -> variavel . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
variavel -> variavel . PTO ID [ PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ACOL ]
variavel -> variavel . ACOL expressao FCOL [ PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ACOL ]
-- On PTO shift to state 43
-- On ACOL shift to state 45
-- On PTV reduce production expressao -> variavel 
-- On OULOG reduce production expressao -> variavel 
-- On MULT reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On FCOL reduce production expressao -> variavel 
-- On ELOG reduce production expressao -> variavel 
-- On DIV reduce production expressao -> variavel 
-- On DIFER reduce production expressao -> variavel 
-- On CONCAT reduce production expressao -> variavel 

State 43:
variavel -> variavel PTO . ID [ VIRG PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ATRIB ACOL ]
-- On ID shift to state 44

State 44:
variavel -> variavel PTO ID . [ VIRG PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ATRIB ACOL ]
-- On VIRG reduce production variavel -> variavel PTO ID 
-- On PTV reduce production variavel -> variavel PTO ID 
-- On PTO reduce production variavel -> variavel PTO ID 
-- On OULOG reduce production variavel -> variavel PTO ID 
-- On MULT reduce production variavel -> variavel PTO ID 
-- On MENOS reduce production variavel -> variavel PTO ID 
-- On MENOR reduce production variavel -> variavel PTO ID 
-- On MAIS reduce production variavel -> variavel PTO ID 
-- On MAIOR reduce production variavel -> variavel PTO ID 
-- On IGUAL reduce production variavel -> variavel PTO ID 
-- On FPAR reduce production variavel -> variavel PTO ID 
-- On FCOL reduce production variavel -> variavel PTO ID 
-- On ELOG reduce production variavel -> variavel PTO ID 
-- On DIV reduce production variavel -> variavel PTO ID 
-- On DIFER reduce production variavel -> variavel PTO ID 
-- On CONCAT reduce production variavel -> variavel PTO ID 
-- On ATRIB reduce production variavel -> variavel PTO ID 
-- On ACOL reduce production variavel -> variavel PTO ID 

State 45:
variavel -> variavel ACOL . expressao FCOL [ VIRG PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ATRIB ACOL ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 46

State 46:
expressao -> expressao . MAIS expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOS expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MULT expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIV expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOR expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . IGUAL expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIFER expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MAIOR expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . ELOG expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . OULOG expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . CONCAT expressao [ OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FCOL ELOG DIV DIFER CONCAT ]
variavel -> variavel ACOL expressao . FCOL [ VIRG PTV PTO OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ATRIB ACOL ]
-- On OULOG shift to state 47
-- On MULT shift to state 49
-- On MENOS shift to state 51
-- On MENOR shift to state 55
-- On MAIS shift to state 57
-- On MAIOR shift to state 61
-- On IGUAL shift to state 63
-- On FCOL shift to state 69
-- On ELOG shift to state 65
-- On DIV shift to state 53
-- On DIFER shift to state 67
-- On CONCAT shift to state 59

State 47:
expressao -> expressao OULOG . expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 48

State 48:
expressao -> expressao . MAIS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MULT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIV expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . IGUAL expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIFER expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MAIOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . ELOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . OULOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao OULOG expressao . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . CONCAT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On MULT shift to state 49
-- On MENOS shift to state 51
-- On MENOR shift to state 55
-- On MAIS shift to state 57
-- On MAIOR shift to state 61
-- On IGUAL shift to state 63
-- On ELOG shift to state 65
-- On DIV shift to state 53
-- On DIFER shift to state 67
-- On CONCAT shift to state 59
-- On PTV reduce production expressao -> expressao OULOG expressao 
-- On OULOG reduce production expressao -> expressao OULOG expressao 
-- On FPAR reduce production expressao -> expressao OULOG expressao 
-- On FCOL reduce production expressao -> expressao OULOG expressao 

State 49:
expressao -> expressao MULT . expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 50

State 50:
expressao -> expressao . MAIS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MULT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao MULT expressao . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIV expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . IGUAL expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIFER expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MAIOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . ELOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . OULOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . CONCAT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On PTV reduce production expressao -> expressao MULT expressao 
-- On OULOG reduce production expressao -> expressao MULT expressao 
-- On MULT reduce production expressao -> expressao MULT expressao 
-- On MENOS reduce production expressao -> expressao MULT expressao 
-- On MENOR reduce production expressao -> expressao MULT expressao 
-- On MAIS reduce production expressao -> expressao MULT expressao 
-- On MAIOR reduce production expressao -> expressao MULT expressao 
-- On IGUAL reduce production expressao -> expressao MULT expressao 
-- On FPAR reduce production expressao -> expressao MULT expressao 
-- On FCOL reduce production expressao -> expressao MULT expressao 
-- On ELOG reduce production expressao -> expressao MULT expressao 
-- On DIV reduce production expressao -> expressao MULT expressao 
-- On DIFER reduce production expressao -> expressao MULT expressao 
-- On CONCAT reduce production expressao -> expressao MULT expressao 

State 51:
expressao -> expressao MENOS . expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 52

State 52:
expressao -> expressao . MAIS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao MENOS expressao . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MULT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIV expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . IGUAL expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIFER expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MAIOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . ELOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . OULOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . CONCAT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On MULT shift to state 49
-- On DIV shift to state 53
-- On PTV reduce production expressao -> expressao MENOS expressao 
-- On OULOG reduce production expressao -> expressao MENOS expressao 
-- On MENOS reduce production expressao -> expressao MENOS expressao 
-- On MENOR reduce production expressao -> expressao MENOS expressao 
-- On MAIS reduce production expressao -> expressao MENOS expressao 
-- On MAIOR reduce production expressao -> expressao MENOS expressao 
-- On IGUAL reduce production expressao -> expressao MENOS expressao 
-- On FPAR reduce production expressao -> expressao MENOS expressao 
-- On FCOL reduce production expressao -> expressao MENOS expressao 
-- On ELOG reduce production expressao -> expressao MENOS expressao 
-- On DIFER reduce production expressao -> expressao MENOS expressao 
-- On CONCAT reduce production expressao -> expressao MENOS expressao 

State 53:
expressao -> expressao DIV . expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 54

State 54:
expressao -> expressao . MAIS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOS expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MULT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIV expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao DIV expressao . [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MENOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . IGUAL expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . DIFER expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . MAIOR expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . ELOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . OULOG expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
expressao -> expressao . CONCAT expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On PTV reduce production expressao -> expressao DIV expressao 
-- On OULOG reduce production expressao -> expressao DIV expressao 
-- On MULT reduce production expressao -> expressao DIV expressao 
-- On MENOS reduce production expressao -> expressao DIV expressao 
-- On MENOR reduce production expressao -> expressao DIV expressao 
-- On MAIS reduce production expressao -> expressao DIV expressao 
-- On MAIOR reduce production expressao -> expressao DIV expressao 
-- On IGUAL reduce production expressao -> expressao DIV expressao 
-- On FPAR reduce production expressao -> expressao DIV expressao 
-- On FCOL reduce production expressao -> expressao DIV expressao 
-- On ELOG reduce production expressao -> expressao DIV expressao 
-- On DIV reduce production expressao -> expressao DIV expressao 
-- On DIFER reduce production expressao -> expressao DIV expressao 
-- On CONCAT reduce production expressao -> expressao DIV expressao 

State 55:
expressao -> expressao MENOR . expressao [ PTV OULOG MULT MENOS MENOR MAIS MAIOR IGUAL FPAR FCOL ELOG DIV DIFER CONCAT ]
-- On STRING shift to state 37
-- On INT shift to state 38
-- On ID shift to state 39
-- On BOOL shift to state 40
-- On APAR shift to state 41
-- On variavel shift to state 42
-- On expressao shift to state 56
